plugins {
    id 'java'
    id 'org.jetbrains.kotlin.jvm' version '1.3.61'
}

group 'com.cyberbot'
version '1.0.0'

sourceCompatibility = 13

test {
    jvmArgs '--enable-preview'
    useJUnitPlatform()
}

repositories {
    mavenCentral()
}

dependencies {
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
    testCompile group: 'junit', name: 'junit', version: '4.12'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
    compile group:'org.xerial', name:'sqlite-jdbc', version:'3.8.11.2'
}

compileJava {
    options.compilerArgs += ["--enable-preview"]
}

compileKotlin {
    kotlinOptions.jvmTarget = "13"
}
compileTestKotlin {
    kotlinOptions.jvmTarget = "13"
}